# QuickShare

./: README.md  app.py  flask_file_transfer.service  gunicorn.conf.py  main.py  pyproject.toml  requirements.txt
templates/: index.html
