[project]
name = "flask-files"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blinker==1.9.0",
    "click==8.2.1",
    "colorama==0.4.6",
    "flask==3.0.2",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "pillow==10.2.0",
    "pypng==0.20220715.0",
    "python-dotenv==1.0.1",
    "qrcode==7.4.2",
    "typing-extensions==4.13.2",
    "werkzeug==3.0.1",
]
